--- a/calculator.css
+++ b/calculator.css
@@ -1,6 +1,6 @@
 body{
   text-align: center;
-  margin-top: 300px;
+  margin-top: 250px;
 }
 
 
@@ -24,5 +24,10 @@ body{
 }
 
 #buton{
-    margin: 2px;
+    margin-top: 5px;
+}
+
+#apasa{
+    text-align: center;
+    margin: 5px;
 }
