--- a/calculator.css
+++ b/calculator.css
@@ -1,6 +1,6 @@
 body{
   text-align: center;
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .buttton{
@@ -35,4 +35,12 @@ input{
     height: 30px;
     font-size: large;
     font-weight: bold;
+}
+
+span{
+    margin-top: 15px;
+    color: red;
+    font-weight: bold;
+    font-size: larger;
+
 }
